--- a/app/test_local_deployment/storage_provider/db.toml
+++ b/app/test_local_deployment/storage_provider/db.toml
@@ -1,4 +1,4 @@
 Username = "i2b2demodata"
-Password = "i2b2demodata"
-DbName = "i2b2demodata"
-Table = "public.demo_data_encrypted"
+Password = "demouser"
+DbName = "postgres"
+Table = "i2b2demodata.demo_data_encrypted"
